<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wp_map_tools</name>
  <version>1.0.0</version>
  <description>a map tools for robots of 6-robot</description>
  <url type="website">http://www.6-robot.com</url>
  <maintainer email="zhangwanjie@126.com">robot</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>visualization_msgs</build_depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins_description.xml"/>
  </export>

</package>
